# C-examples

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  convert.c  quickSort
.github/workflows/: ci.yml  codacy-analysis.yaml  codacy-analysis.yml  freebsd.yml  netbsd.yml  openbsd.yml  vcpkg-macos.yml  vcpkg-ubuntu.yml
MJ/: mj.tesh
algorithm/BCC/: Android.mk  BCC.c  BCC.h  BCCTest.c  CMakeLists.txt  Makefile
algorithm/BCC/jni/: BCCTest  BCCTest.c  Makefile
algorithm/BCC/src/include/: bcc.h
algorithm/BCC/src/main/: bccsum.c
algorithm/BCC/src/test/: test.c
algorithm/LRC/: LRC.h
algorithm/URL/: Android.mk  CMakeLists.txt  Makefile  URL.c  URLTest.c
algorithm/URL/src/main/: url.c
algorithm/URL/src/test/: test.c
algorithm/base16/: CMakeLists.txt  Makefile  base16.pc  base16.pc.in
algorithm/base16/jni/: Android.mk  Makefile  base16.c  base16.h  base16Test  base16Test.c
algorithm/base16/src/lib/: base16.c  base16.h  base16.pc.in  base16Config.cmake.in
algorithm/base16/src/main/: base16-decode.c  base16-encode.c  base16.c
algorithm/base16/src/test/: FindCUnit.cmake  test.c
algorithm/bcc/: CMakeLists.txt  libbcc.pc  libbcc.pc.in
algorithm/bcc/src/lib/: bcc.c  bcc.pc.in
algorithm/bcc/src/main/: bccsum.c
algorithm/chinese-calendar/: CMakeLists.txt  chinese-calendar.pc  chinese-calendar.pc.in  libchinese-calendar.pc
algorithm/chinese-calendar/build.d/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  chinese-calendar  chinese-calendar-test  cmake_install.cmake  install_manifest.txt
algorithm/chinese-calendar/output/lib/: libchinese-calendar.dylib
algorithm/chinese-calendar/output/lib/cmake/: FindChineseCalendar.cmake
algorithm/chinese-calendar/output/lib/pkgconfig/: chinese-calendar.pc
algorithm/chinese-calendar/src/include/: chinese-calendar.h
algorithm/chinese-calendar/src/lib/: chinese-calendar.c  chinese-calendar.pc.in
algorithm/chinese-calendar/src/main/: chinese-calendar.c
algorithm/chinese-calendar/src/test/: chinese-calendar.c  test.c
algorithm/convert/: convert.c
algorithm/crc/: Android.mk  CRC.c  CRC.h  CRCTest.c  Makefile
algorithm/lrc/: CMakeLists.txt  LRC.c  LRCTest.c  Makefile
algorithm/lrc/src/lib/: lrc.c  lrc.h  lrc.pc.in
algorithm/lrc/src/main/: lrcsum.c
algorithm/lrc/src/test/: lrc.c
algorithm/url/: CMakeLists.txt  FindURL.cmake  liburl.pc  url.pc  url.pc.in
algorithm/url/jni/: Android.mk  Makefile  url.c  url.h  urlTest  urlTest.c
algorithm/url/src/lib/: url.c  url.pc.in
algorithm/url/src/main/: url.c
algorithm/url/src/test/: url.c
array/: array  array.c  array3.c  array4.c
assert/: assert.c  assert2.c
autotools/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  configure.ac~  test.c
autotools/.deps/: test.Po
autotools/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
autotools/build-aux/: config.sub
autotools/m4/: ax_prog_cc_for_build.m4
autotools/src/: Makefile  Makefile.am  Makefile.in
bool/: bool.c  bool.h
build.d/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
char/: chinese.c  isalnum.c  isalpha.c  isascii.c  ispunct.c  isspace.c  isxdigit.c  limits.c
compiler/gcc/: Doption  Doption.c  Makefile
enum/: enum  enum.c  enum5.c  enum7.c  enum8.c
function/: main  main2.c  main4.c  main_a  main_b
hello/: conditioncompile.c  conditioncompile2.i  conditioncompile3.i  hello.s  hello3.c  hong.c
linux/: fork.c  syscall.c
linux/autotools/: config.h  configure  configure.ac  test
linux/pthread/: thread.c  thread2.c  thread3.c  thread4.c
macro/: build_in_macro  build_in_macro.c
number/: number.c
number/float/: float.c  float2.c  float3.c  float4.c
number/int/: integer.c  integer.h  integer2.c  integer4.c
number/math/: atan.c  ceil.c  cosh.c  exp.c  floor.c  fmod  log.c  modf.c  sin.c  sinh.c  sqrt.c  tanh.c
number/stdlib/: rand  rand.c  stdlib_macro  stdlib_macro.c  str2num.c
operator/: sizeof  sizeof.c  sizeof3.c  sizeof4.c
output/include/: chinese-calendar.h  url.h
output/lib/: libbase16.dylib  liburl.dylib
pointer/: pointer  pointer.c  pointer10.c  pointer2.c  pointer3.c  pointer4.c  pointer5.c  pointer6.c  pointer7.c  pointer8.c  swap.c  swap2.c  swap3.c
posix/pthread/: thread2.c
setjmp/: goto.c  setjmp3.c
signal/: signal.c
standard/array/: 99MultipTable.c  array2.c  array4.c  array5.c  array6.c
standard/bool/: bool.s
standard/char/: isgraph.c  islower.c
standard/comment/: comment.c
standard/enum/: enum3.c
standard/function/: main1.c  main3.c
standard/hello/: conditioncompile.i  conditioncompile2.c  hello  hello.i  hello2.c  hello2.h  hello3.h  hong.i
standard/linux/eventpool.h/: CMakeLists.txt  eventpooltest.c
standard/number/: number.c
standard/operator/: sizeof2.c
standard/pointer/: pointer.c  pointer2.c  pointer8.c
standard/stdarg/: stdarg.c
standard/stdio/: fgets.c  gets.c  tmpfile.c
standard/stdlib/: exit2.c  stdlib.c
standard/string/: strcat.c  strcmp.c  strncpy.c
standard/struct/: person.c  person3.c
standard/time/: localtime.c  mktime.c
standard/variable/: register.c
stdio/: fgetc.c  fgetpos.c  fputs.c  fread.c  fseek.c  ftell  ftell.c  fwrite.c  perror.c  puts.c  rename.c
stdlib/: abort.c  abort2.c  abs.c  atexit.c  getenv.c  malloc.c  putenv.c  realloc.c  realloc2.c  str2num.c  system
string/: gets  gets.c  strcat.c  strcpy.c  strlen  strlen.c  strncat.c  strncmp.c  strncpy.c
struct/: person  person.c  person2.c  person3.c  person4.c  person5.c  person6.c  person7.c
time/: clock.c  difftime.c  strftime.c  tzset.c
tmp/: tmp.c
union/: union.c  union5.c
utils/self_exe_path/: CMakeLists.txt  getexepath.c  main.c  self.c  self.h
utils/sysinfo/: CMakeLists.txt  README.md
utils/sysinfo/src/lib/: sysinfo.c  sysinfo.h  sysinfo.pc.in  sysinfoConfig.cmake.in
utils/sysinfo/src/main/: sysinfo.c
utils/sysinfo/src/test/: sysinfo.c
variable/: auto.c  extern.c  extern2.c  local.c  other.c  other.h  register  static.c  variable2.c  variable3.c  variable3_other.c
(+185 files in other folders)
